overflow fix

--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,9 @@
   }
   html {
     font-family: "Inter", sans-serif;
-    @apply m-0
+    @apply 
+    overflow-hidden
+    m-0
     p-0
     w-full
     h-full
